--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-index.html
+<h1>Bienvenue sur mon site NOVA</h1>
+<p>Ceci est ma première page personnalisée !</p>
+<link rel="stylesheet" href="style.css">
+
