--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
-<h1>Bienvenue sur mon site NOVA</h1>
-<p>Ceci est ma première page personnalisée !</p>
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ma Marque</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Header avec logo et nom -->
+  <header>
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Logo de la marque" class="logo">
+      <h1 class="brand-name">Ma Marque</h1>
+    </div>
+  </header>
+
+  <!-- Contenu principal -->
+  <main>
+    <section class="intro">
+      <h2>Bienvenue sur mon site</h2>
+      <p>Voici un site simple en noir et blanc, avec ma marque mise en avant.</p>
+    </section>
+  </main>
+
+  <!-- Pied de page -->
+  <footer>
+    <p>&copy; 2025 Ma Marque - Tous droits réservés</p>
+  </footer>
+</body>
+</html>
+
 
