--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Bienvenue sur NOVA</title>
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -29,5 +30,6 @@
   </footer>
 </body>
 </html>
+<img src="images/logo.png" alt="Logo de la marque NOVA">
 
 
