--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<title>Bienvenue sur NOVA</title>
+<title>Bienvenue chez NOVA</title>
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ma Marque</title>
+  <title>Nova</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,14 +12,14 @@
   <header>
     <div class="logo-container">
       <img src="images/logo.png" alt="Logo de la marque" class="logo">
-      <h1 class="brand-name">Ma Marque</h1>
+      <h1 class="brand-name">Nova</h1>
     </div>
   </header>
 
   <!-- Contenu principal -->
   <main>
     <section class="intro">
-      <h2>Bienvenue sur mon site</h2>
+      <h2>Bienvenue sur Nova</h2>
       <p>Voici un site simple en noir et blanc, avec ma marque mise en avant.</p>
     </section>
   </main>
