--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
-<title>Bienvenue chez NOVA</title>
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nova</title>
+  <title>Site officiel de NOVA</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header avec logo et nom -->
   <header>
-    <div class="logo-container">
-      <img src="images/logo.png" alt="Logo de la marque" class="logo">
-      <h1 class="brand-name">Nova</h1>
-    </div>
+    <img src="images/logo.png" alt="Logo NOVA" class="logo">
+    <nav>
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Contenu principal -->
   <main>
     <section class="intro">
-      <h2>Bienvenue sur Nova</h2>
-      <p>Voici un site simple en noir et blanc, avec ma marque mise en avant.</p>
+      <h1>Bienvenue sur le site de NOVA</h1>
+      <p>Découvrez notre univers graphique, minimaliste et moderne.</p>
+    </section>
+
+    <section class="about">
+      <h2>À propos</h2>
+      <p>NOVA est une marque dédiée à l’élégance visuelle et à la simplicité fonctionnelle. Notre design noir et blanc reflète notre engagement pour la clarté et l’impact.</p>
     </section>
   </main>
 
-  <!-- Pied de page -->
   <footer>
-    <p>&copy; 2025 Ma Marque - Tous droits réservés</p>
+    <p>&copy; 2025 NOVA — Tous droits réservés</p>
   </footer>
 </body>
 </html>
-<img src="images/logo.png" alt="Logo de la marque NOVA">
+
 
 
